add sample test js file called by run.html

--- a/src/run.html
+++ b/src/run.html
@@ -4,9 +4,7 @@
 
 <title>My First JavaScript Program</title>
 
-<script type ='text/javascript'>
-
-alert("Hello, How are You?");
+<script src="test.js"></script>
 
 </script>
 
