--- a/src/run.html
+++ b/src/run.html
@@ -4,6 +4,10 @@
 
 <title>My First JavaScript Program</title>
 
+<canvas class="myCanvas" width="320" height="240">
+  <p>Your browser doesn't support canvas. Boo hoo!</p>
+</canvas>
+
 <script src="test.js"></script>
 
 </script>
