add canvas boarders

--- a/src/run.html
+++ b/src/run.html
@@ -8,7 +8,7 @@
   <p>Your browser doesn't support canvas. Boo hoo!</p>
 </canvas>
 
-<script src="test.js"></script>
+<script src="canvas.js"></script>
 
 </script>
 
