--- a/src/run.html
+++ b/src/run.html
@@ -2,8 +2,13 @@
 
 <head>
 
+<style src="style.css"></style>
 <title>My First JavaScript Program</title>
 
+</head>
+
+<body>
+    
 <canvas class="myCanvas" width="320" height="240">
   <p>Your browser doesn't support canvas. Boo hoo!</p>
 </canvas>
@@ -12,8 +17,6 @@
 <script src="background.js"></script>
 <script src="ship_of_the_line.js"></script>
 
-</script>
-
-</head>
+</body>
 
 </html>
