--- a/src/index.html
+++ b/src/index.html
@@ -1,2 +1,18 @@
-<div run="run.html"></div>
+<html>
 
+<head>
+
+<title>My First JavaScript Program</title>
+
+<canvas class="myCanvas" width="320" height="240">
+  <p>Your browser doesn't support canvas. Boo hoo!</p>
+</canvas>
+
+
+<script src="main_menu.js"></script>
+
+</script>
+
+</head>
+
+</html>
