changed title and got enemy ship position

--- a/src/run.html
+++ b/src/run.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>My First JavaScript Program</title>
+<title>Faster Than Wind</title>
 
 <canvas class="myCanvas" width="320" height="240">
   <p>Your browser doesn't support canvas. Boo hoo!</p>
