add style.css and temp button

--- a/src/run.html
+++ b/src/run.html
@@ -2,8 +2,8 @@
 
 <head>
 
-<style src="style.css"></style>
 <title>My First JavaScript Program</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
