cool cannon ball anim

--- a/src/run.html
+++ b/src/run.html
@@ -4,8 +4,8 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>Faster Than Wind</title>
-
-<script src="jquery.js"></script>	// https://stackoverflow.com/questions/38837835/include-html-in-another-html-file
+<!--  https://stackoverflow.com/questions/38837835/include-html-in-another-html-file -->
+<script src="jquery.js"></script>	
 <script> 
 $(function(){
   $("#DivContent").load("audio_source.html"); 
