ui hotbar progress

--- a/src/run.html
+++ b/src/run.html
@@ -3,19 +3,28 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <title>Faster Than Wind</title>
 
 </head>
 
 <body>
-    
+
+
 <canvas class="myCanvas" width="320" height="240">
   <p>Your browser doesn't support canvas. Boo hoo!</p>
 </canvas>
 
+<div class="w3-bar w3-black" id="hotbar">
+  <div class="w3-bar-item w3-hover-red" id="shoot">Shoot</div>
+  <div class="w3-bar-item w3-hover-green" id="repair">Paris</div>
+  <div class="w3-bar-item w3-hover-blue" id="abandon">Tokyo</div>
+</div>
+
 <script src="background.js"></script>
-<script src="main_menu.js"></script>
 <script src="ship_of_the_line.js"></script>
+<script src="ui.js"></script>
+
 
 </body>
 
