Rename hotbar items

--- a/src/run.html
+++ b/src/run.html
@@ -24,9 +24,10 @@ $(function(){
 
 <div class="w3-bar w3-black" id="hotbar">
   <div class="w3-bar-item w3-hover-red" id="shoot">Shoot</div>
-  <div class="w3-bar-item w3-hover-green" id="repair">Paris</div>
-  <div class="w3-bar-item w3-hover-blue" id="abandon">Tokyo</div>
+  <div class="w3-bar-item w3-hover-green" id="repair">Repair</div>
+  <div class="w3-bar-item w3-hover-blue" id="abandon">Abandon</div>
 </div>
+
 <div id="DivContent"></div>
 
 <script src="background.js"></script>
