Change hotbar font, add wood texture, make bigger and align with bottom of screen

--- a/src/run.html
+++ b/src/run.html
@@ -4,6 +4,9 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+
+
 <title>Faster Than Wind</title>
 <!--  https://stackoverflow.com/questions/38837835/include-html-in-another-html-file -->
 <script src="jquery.js"></script>	
@@ -22,7 +25,7 @@ $(function(){
   <p>Your browser doesn't support canvas. Boo hoo!</p>
 </canvas>
 
-<div class="w3-bar w3-black" id="hotbar">
+<div class="w3-bar" id="hotbar">
   <div class="w3-bar-item w3-hover-red" id="shoot">Shoot</div>
   <div class="w3-bar-item w3-hover-green" id="repair">Repair</div>
   <div class="w3-bar-item w3-hover-blue" id="abandon">Abandon</div>
