--- a/src/run.html
+++ b/src/run.html
@@ -33,6 +33,7 @@ $(function(){
 
 <div id="DivContent"></div>
 
+<script src="preamble.js"></script>
 <script src="background.js"></script>
 <script src="ship_of_the_line.js"></script>
 <script src="ui.js"></script>
