--- a/src/run.html
+++ b/src/run.html
@@ -28,6 +28,10 @@
   <p>Your browser doesn't support canvas. Boo hoo!</p>
 </canvas>
 
+<!-- <div class='ship_container' id='ship_container'>
+  <img src='../assets/img/small_boat.png' id='shipaaa'>
+</div> -->
+
 <div class="w3-bar" id="hotbar">
   <div class="w3-bar-item w3-hover-red" id="shoot">Shoot</div>
   <div class="w3-bar-item w3-hover-green" id="repair">Repair</div>
