create splash screen

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,13 @@
 
 <head>
 
-<title>My First JavaScript Program</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
 
-<canvas class="myCanvas" width="320" height="240">
+<title>Faster Than Wind</title>
+
+<canvas id="screen" class="myCanvas" width="320" height="240">
   <p>Your browser doesn't support canvas. Boo hoo!</p>
 </canvas>
 
