--- a/src/run.html
+++ b/src/run.html
@@ -28,24 +28,17 @@
   <p>Your browser doesn't support canvas. Boo hoo!</p>
 </canvas>
 
-<!-- <div class='ship_container' id='ship_container'>
-  <img src='../assets/img/small_boat.png' id='shipaaa'>
-</div> -->
-
 <div class="w3-bar" id="hotbar">
   <div class="w3-bar-item w3-hover-red" id="shoot">Shoot</div>
   <div class="w3-bar-item w3-hover-green" id="repair">Repair</div>
   <div class="w3-bar-item w3-hover-blue" id="abandon">Abandon</div>
 </div>
 
-<div id="DivContent"></div>
-
-<script src="preamble.js"></script>
 <script src="background.js"></script>
 <script src="audio.js"></script>
 <script src="ship_of_the_line.js"></script>
 <script src="background.js"></script>
-<script src="preamble.js"></script>
+<script src="instantiation.js"></script>
 <script src="ui.js"></script>
 
 
